--- a/index.html
+++ b/index.html
@@ -11,14 +11,23 @@
     <nav>
         <ul>
             <li><img src="logo.png"></li>
-            <li>Home</li>
-            <li>About</li>
-            <li>Service</li>
-            <li>Contact</li>
+            <li><a href="#">Home</a></li> 
+            <li><a href="#">About</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Contact</a></li>
             <li> <button>Sign Up</button></li>
         </ul>
 
     </nav>
     <!-- navbar -->
+    <section>
+        <h1>We will help you to find <br>
+            your home
+        </h1>
+        <img class="one" src="hotelA.jpeg">
+        <img class="two" src="hotelB.webp">
+
+    </section>
+    <!-- hero -->
 </body>
 </html>
