--- a/index.html
+++ b/index.html
@@ -29,5 +29,42 @@
 
     </section>
     <!-- hero -->
+
+    <main>
+        <div class="left">
+            <h1>Go to the moon</h1>
+            <p>mldmldmldmldmldmdlmdlmldmdlmdlmdllfmlf</p>
+            <div class="option">
+                <img src="IconA.png">
+                <div class="content">
+                    <h1>ksokdoksd</h1>
+                    <p>ksdnksmnks</p>
+                </div>
+
+            </div>
+            <div class="option">
+                <img src="IconA.png">
+                <div class="content">
+                    <h1>ksokdoksd</h1>
+                    <p>ksdnksmnk</p>
+                </div>
+            </div>
+            <div class="option">
+                <img src="IconA.png">
+                <div class="content">
+                    <h1>ksokdoksd</h1>
+                    <p>ksdnksmnks</p>
+                </div>
+            </div>
+            
+        </div>
+
+        <div class="right">
+            <img src="hotelC.jpeg">
+
+        </div>
+
+    </main>
+    <!-- main -->
 </body>
 </html>
